commit- before i go home

--- a/FinalProject/FIRST TAB/EventsViewController.xib
+++ b/FinalProject/FIRST TAB/EventsViewController.xib
@@ -32,5 +32,13 @@
             </connections>
             <point key="canvasLocation" x="-7" y="63"/>
         </collectionView>
+        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Aoz-rp-pMw">
+            <rect key="frame" x="0.0" y="0.0" width="42" height="21"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+            <nil key="textColor"/>
+            <nil key="highlightedColor"/>
+            <point key="canvasLocation" x="479" y="199"/>
+        </label>
     </objects>
 </document>
