--- a/FinalProject/THIRD TAB/FriendProfileViewController.xib
+++ b/FinalProject/THIRD TAB/FriendProfileViewController.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -37,6 +38,7 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r23-h3-IVK">
                             <rect key="frame" x="55" y="175" width="264" height="155"/>
                             <constraints>
+                                <constraint firstAttribute="width" secondItem="r23-h3-IVK" secondAttribute="height" multiplier="264:155" id="cfZ-Q0-gUi"/>
                                 <constraint firstAttribute="height" constant="155" id="yGV-rk-z9n"/>
                             </constraints>
                         </imageView>
